Video title overflowing to next line no longer pushes other elements down VideoCard

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,21 @@
+#root {
+    background: #525E75;
+}
+
 #gallery {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 10px;
+    margin: 0 20px;
 }
 
 html, body {
     margin: 0;
     padding: 0;
+}
+
+.textContainer {
+    margin-bottom: 10px;
+    height: 30px;
 }
